--- a/pages/stylesheets/home.css
+++ b/pages/stylesheets/home.css
@@ -13,8 +13,8 @@ body {
     width: 100%;
     height: 58px;
     z-index: 1; /* Necessário para que os elementos pertencentes a barra do usuário, mas exibidos fora dela (menu e resultado das buscas) fiquem em primeiro plano */
-    background: linear-gradient(to right, #e8e8e8, #d7dbe0); /*Cor da barra do usuário*/
-    border-bottom: 1px solid #dedede;
+    background: linear-gradient(to right, #b3e5fc, #039be5); /* LLLLLLLLLLLLLLLLL NOVO *//*Cor da barra do usuário*/
+    border-bottom: 1px solid #b3e5fc;/*#dedede;*//* LLLLLLLLLLLLLLLLLL F5 */
 }
 /* Div para conter os elementos da barra do usuário*/
 .barra_usuario_container {
