--- a/pages/stylesheets/c2.css
+++ b/pages/stylesheets/c2.css
@@ -11,9 +11,9 @@
 /*                          CABEÇÁLIO DO  ESPAÇO ATIVO (exibido na coluna c2)                         */
 /******************************************************************************************************/
 .espaco_cabecalio {
-    width: 100%; /* LLLLLLLLLLLLLLLLL F5 */
+    width: 100%; /* LAYOUT RESPONSIVO */
     height: 46px;
-    margin-left: 0; /* LLLLLLLLLLLLLLLLLL F5 */
+    margin-left: 0; /* LAYOUT RESPONSIVO */
     font-weight: 700;
     color: #3e4859;
     position: relative; /* Para posicionar a catraca*/
@@ -117,13 +117,12 @@
 /*                                      ÁREA DE EXIBIÇAO DA CONVERSA                                  */
 /******************************************************************************************************/
 .espaco_mensagens_container {
-    width: 100%; /* LLLLLLLLLLLLL F5 */ /* Layou responsivo */
-    margin-left: 0; /* LLLLLLLLLLLLL F5 */ /* Layou responsivo */
+    width: 100%; /* Layout responsivo */
+    margin-left: 0; /* Layout responsivo */
     padding-top: 10px;
     height: calc(100% - 178px);
     border-radius: 4px;
-    /*background: linear-gradient(to bottom right, #d7f2d7, #c3dbc3); /*#d7f2d7, #c3dbc3*/ /*#c9e5c9, #bcd8bc*/
-    background: url('backgrounds/polygon2.png'); /* LLLLLLLLLLLLLLLLL F5*/
+    background: url('backgrounds/polygon2.png');
     overflow-y: auto;
 }
 /* Mensagens do usuário */
@@ -132,9 +131,8 @@
     clear: both;
     float: right;
     max-width: 70%;
-    background: #673ab7;/*#e91e63; ringo #673ab7; perple #00acc1; ciano #fbc02d; amarelo #607d8b; bgrey /* LLLLLLLLLLLLLLLLLLLLLL F5 */
-    /*color: #fff;/* LLLLLLLLLLLLLLLLLLLLLLL OUT */
-    border-radius: 12px; /* LLLLLLLLLLLLLLLLLLLL F5 */
+    background: #673ab7;/*#e91e63; ringo #673ab7; perple #00acc1; ciano #fbc02d; amarelo #607d8b; bgrey */
+    border-radius: 12px;
     box-shadow: 1px 1px 2px #aaa;
     margin: 2px 4%;
     opacity: 0;
@@ -156,28 +154,45 @@
 }
 .user_message_container .horario {
     float: left;
-    color: #ffee99;/* LLLLLLLLLLLLLLLLLLL F5*//*#888*/
+    color: #ffee99;
     font-size: 12px;
 }
 .user_message_container .texto {
     clear: left;
     padding: 2px 8px 6px 8px;
-    color: #fff;/* LLLLLLLLLLLLLLLLLLLLLL F5*//*#333;*/
+    color: #fff;
     font-size: 14px;
 }
 /* Mensagens de outros usuários */
-.other_user_message_container {
-    display: block;
+/* MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM */
+.other_user_general_container { /* MMMMMMMMMMMMMMMMMMMMM NOVO */
     clear: both;
     float: left;
-    max-width: 70%;
-    background: rgba(255,255,255,1); /* LLLLLLLLLLLLLLLL F5 *//*#f9f4c2*/
-    /*color: #3e4859;*/ /* LLLLLLLLLLLLLLLLLLLL OUT */
-    border-radius: 12px; /* LLLLLLLLLLLLLLLLLLLL F5 */
-    box-shadow: 1px 1px 2px #aaa;
     margin: 2px 4%;
+    max-width: 90%;
     opacity: 0;
     transition: opacity 0.5s ease-in-out;
+}
+.other_user_pic_container { /* MMMMMMMMMMMMMMMMMMMMM NOVO */
+    float: left;
+    background-image: url('backgrounds/profile_placeholder.png');
+    background-repeat: no-repeat;
+    width: 36px;
+    height: 36px;
+    background-size: 36px;
+    border-radius: 50%;
+    margin: 0 4px 2px 4px;
+}
+/* MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM */
+.other_user_message_container {
+    display: block;
+    /* clear: both; /* MMMMMMMMMMMMMMMMMMMMM MOVED */
+    float: left;
+    max-width: 80%; /* MMMMMMMMMMMMMMMMMMMMM F5 */
+    background: rgba(255,255,255,1);
+    border-radius: 12px;
+    box-shadow: 1px 1px 2px #aaa;
+    /* margin: 2px 4%; /* MMMMMMMMMMMMMMMMMMMMM MOVED */
     overflow: hidden;
 }
 .other_user_message_container .cabecalio {
@@ -201,7 +216,7 @@
 .other_user_message_container .texto {
     clear: left;
     padding: 2px 8px 6px 8px;
-    color: #353535; /* LLLLLLLLLLLLLLLLLL F5 */
+    color: #353535;
     font-size: 14px;
 }
 
@@ -209,8 +224,8 @@
 /*                                 ÁREA DE DIGITAÇÃO E ENVIO DE MENSAGENS                             */
 /******************************************************************************************************/
 .espaco_area_texto {
-    width: 100%; /* LLLLLLLLLLLLL F5 */ /* Layou responsivo */
-    margin-left: 0; /* LLLLLLLLLLLLL F5 */ /* Layou responsivo */
+    width: 100%; /* Layou responsivo */
+    margin-left: 0; /* Layou responsivo */
     background-color: #eae5e1;
     height: 46px;
     padding: 9px 0;
@@ -224,7 +239,7 @@
     border-radius: 8px;
     background-color: #f5f5f5;
 }
-.espaco_area_texto input[type=submit] { /* LLLLLLLLLLLLLLLLL F5 */
+.espaco_area_texto input[type=submit] {
     background: #673ab7 url('backgrounds/send4.png');
     background-repeat: no-repeat;
     width: 42px;
@@ -235,7 +250,7 @@
     padding: 10px 0 0 4px;
 }
 .espaco_area_texto input[type=submit]:hover {
-    background-color: #4527a0; /* LLLLLLLLLLLLLLLLLLLLL F5 */
+    background-color: #4527a0;
 }
 .area_texto_item {
     float: left;
@@ -245,7 +260,7 @@
 /*                                   AJUSTES DO LAYOUT RESPONSIVO                                     */
 /******************************************************************************************************/
 
-@media screen and (min-width: 640px) { /* LLLLLLLLLLLLLLLLLLLL NOVO */
+@media screen and (min-width: 640px) {
     .espaco_cabecalio {
         width: 99%;
         margin-left: 1%;
